[package]
name = "planetscale-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.17", features = ["headers"] }
axum-auth = "0.4.0"
axum-macros = "0.3.7"
dotenvy = "0.15.7"
mysql = "23.0.1"
serde = { version = "1.0.160", features = ['derive'] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "serde"] }
